--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 			@font-face {
 			  font-family: 'Lato';
 			  font-style: normal;
@@ -147,7 +146,7 @@
 			#dialogmessage {
 				position:absolute;
 				bottom:0px;
-				padding:20px;
+				padding:10px;
 				background:grey;
 				color:white;
 				text-align:center;
@@ -157,6 +156,8 @@
 			.drawmode ~ #dialogmessage{
 				display:block;
 			}		
+			
+			
 		/* Circle drawing */
 
 			#circledraw {
@@ -164,6 +165,8 @@
 				display:none;
 				pointer-events:none;
 				cursor:crosshair;
+				width: 100%;
+				height: 100%;
 			}
 			
 			#outer {
