--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@
 				margin-left:-20px;
 				margin-top:-20px;
 				background:grey;
-				box-shadow: 0 1px 2px rgba(34, 25, 25, 0.75);
+				box-shado: 0 1px 2px rgba(34, 25, 25, 0.75);
+				border:1px solid orange;
 
 			}
 
