--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@
 				margin-left:-20px;
 				margin-top:-20px;
 				background:grey;
-				box-shado: 0 1px 2px rgba(34, 25, 25, 0.75);
-				border:1px solid orange;
+				box-shadow: 0 0px 2px rgba(255, 102, 0, 0.75);
 
 			}
 
