--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 				top:50%;
 				left:42%;
 				display:none;
-				color:white;
+				color:grey;
 				font-size:2em;
 			}
 			
@@ -145,23 +145,29 @@
 				margin-left:-20px;
 				margin-top:-20px;
 				background:orange;
-				box-shadow: 0 0px 2px rgba(0, 0, 0, 0.75);
+				box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+				border:2px solid white;
 
 			}
-			img.closed {
+			.closed {
+
+			}
+			.closed img {
 				width:0px;
 				height:0px;
 				margin:0px;
+				border:none;
+				box-shadow:none;
 			}
 			#map .leaflet-marker-icon:hover img {
 				width:200px;
 				height:200px;	
 				margin-left:-100px;
-				margin-top:-100px;				
+				margin-top:-100px;
+				border:none;
 			}
 			
-			#map .leaflet-marker-icon:active img {
-				box-shadow: 0 10px 20px rgba(34, 25, 25, 1);
+			#map .leaflet-marker-icon:active img{
 			}		
 			
 			#map .leaflet-popup-pane {
@@ -188,7 +194,12 @@
 				pointer-event: none;				
 			}
 	
-
+			#listingcount {
+				position:absolute;
+				top:20px;
+				text-align:center;
+				width:50%;
+			}
 			#dialogmessage {
 				position:absolute;
 				bottom:0px;
@@ -302,7 +313,10 @@
 			#detailedmap .leaflet-popup-pane {
 				margin-top:-20px;
 			}
-			
+			#detailedmap .leaflet-marker-icon {
+				width:20px;
+				height:20px;
+			}
 			#intersectiontooltip {
 				font-size:1.5em;
 				font-weight:600;
