--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 				font-family: Lato, sans-serif;
 				height:100%;
 				-webkit-perspective: 1200;
+				min-width:1024px;
 			}
 			#loader {
 				position:absolute;
@@ -199,9 +200,8 @@
 	
 			#listingcount {
 				position:absolute;
-				top:20px;
-				text-align:center;
-				width:50%;
+				bottom:20px;
+				right:20px;
 			}
 			#dialogmessage {
 				position:absolute;
@@ -234,13 +234,13 @@
 			
 			#outer {
 				stroke-width:2px;
-				stroke:white;
+				stroke:grey;
 				fill:white;
 				stroke-opacity:0.5;
 			}
 			
 			#center {
-				fill:white;
+				fill:grey;
 			}
 			#radius {
 				stroke:white;
@@ -249,7 +249,7 @@
 			}
 
 			#radiusdistance {
-				fill:white;
+				fill:grey;
 				text-anchor:middle;
 			}
 			.leaflet-popup-close-button {
@@ -257,8 +257,8 @@
 			}
 			path.leaflet-clickable {
 				fill:orange;
-				fill-opacity:0.05;
-				stroke:orange;
+				fill-opacity:0;
+				stroke:grey;
 				stroke-dasharray:1,10;
 				stroke-opacity:1;
 				stroke-width:3;
@@ -268,19 +268,25 @@
 		/* Detail view */
 
 			#detailview {
-				width:100%;
+				width:80%;
+				margin:30px 10%;
 				position:absolute;
 				z-index:2;
 				background:white;
 				-webkit-transform:translateY(-3000px);
 				transition:all 0.4s;
-				height:100%;
+				height:90%;
 				box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-				transition-timing-functio: cubic-bezier(0,1.65,.65,1);
+				overflow:hidden;
 			}		
 
 			#detailtext {
-				width:68%;overflow:scroll;height:100%;margin:0% 2%;
+				width: 64%;
+				overflow-y: scroll;
+				overflow-x:hidden;
+				height: 95%;
+				float: right;
+				padding: 2%;
 			}
 
 			.open#detailview {
@@ -303,22 +309,21 @@
 			}
 
 			.showcontact {
-				color:orange;
 				text-decoration: none;
 				pointer-events:none;
+				font-weight:bold;
 			}
 
 			.showcontact:before {
-				content:'\260e ';
-				margin-right:5px;			
+			
 			}
 
 			#detailedmap {
-				float:right;
 				width:30%;
 				background:#eee;
 				height:100%;
-				border-left:1px solid #ccc;
+				border-right:1px solid #ccc;
+				float:left;
 			}
 			
 			#detailedmap .leaflet-popup-pane {
@@ -344,28 +349,27 @@
 
 			#preview {
 				display:inline-block;
-				height:400px;
 				overflow: hidden;
+				vertical-align: top;
+				padding-right:15px;
 			}
 
 			#preview img {
 				max-width:60px;
 				max-height:60px;
-				margin-bottom:2px;
+				margin-bottom:3px;
 				display:block;
-				padding-right:15px;
 			}
 
 			#preview img:hover {
 				opacity:0.5;
 			}
 			#gallery {
-				display:table;
-				width:100%;
-				background:#eee;
+				width:120%;
 				height:400px;
 			}
 			
 			#galleryimg {
 				max-height:400px;
+				max-width:80%;
 			}
