--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@
 				z-index:2;
 				background:white;
 				-webkit-transform:translateY(-3000px);
-				-webkit-transition-timing-function:cubic-bezier(0,1.05,.87,1);				
+				
 				transition:all 0.4s;
 				height:90%;
 				box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
@@ -345,7 +345,6 @@
 
 			.open#detailview {
 				-webkit-transform:translateY(0px);
-				-webkit-transition-timing-function:cubic-bezier(0,1.2,1,1);				
 			}
 
 			.detail-marker img {
@@ -373,6 +372,7 @@
 				font-size:1.8em;
 				width:80%;
 				min-width:500px;
+				color: #666;
 			}
 			#listingsubtitle {
 				color:#a7b5bc;
@@ -385,6 +385,9 @@
 				font-family:Georgia, serif;
 				line-height: 160%;
 				margin-top:30px;
+				border-bottom: 4px double #a7b5bc;
+				padding-bottom:25px;
+				margin-bottom:25px;
 			}
 
 			#listingbody h1,
