--- a/style.css
+++ b/style.css
@@ -44,12 +44,31 @@
 				top:50%;
 				left:50%;
 				display:block;
-				color:grey;
-				font-size:2em;
+				color:orange;
+				opacity:0.6;
+				font-size:10em;
 				-webkit-transition-timing-function:cubic-bezier(0,1.2,.87,1);
 				transition:all 0.2s;
 			}
-			
+
+			#spinny {
+				-webkit-animation:spin 1s infinite ease-out;
+				-webkit-transform-origin:50% 50%;
+				text-align:center;
+				margin-top: -95px;
+				margin-left: -48px;
+			}
+			@-webkit-keyframes spin {
+					  0% {
+					  -webkit-transform:rotate(360deg);
+					  
+					  }
+					  
+					  100% {
+					  -webkit-transform:rotate(0deg);
+						  
+					  }
+			}
 			
 			/* Main dialog */
 
@@ -266,10 +285,10 @@
 				stroke-width:2px;				
 			}		
 			#outer {
-				stroke-width:2px;
-				stroke:grey;
+				stroke-width:3px;
+				stroke:white;
 				fill:white;
-				stroke-opacity:0.5;
+				stroke-opacity:0.8;
 			}
 			
 			#center {
