--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 			}
 			
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 10px;
 }
  
 ::-webkit-scrollbar-track {
@@ -36,7 +36,7 @@
  
 ::-webkit-scrollbar-thumb {
     border-radius: 3px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    background:#ccc;
 }
  
 			#loader {
